src/components/Tribine/Tribine.css
.tribine-card {
  transition: transform 0.3s ease;
  height: 330px;
  height: 330px;
}

.tribine-card:hover {
  transform: scale(1.05);
}

.thumbnail {
  width: 100%;
  height: 330px;
  object-fit: cover;
}

.gradient-overlay {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100%;
  background: linear-gradient(to top, rgba(38, 42, 88, 0.8), transparent);
}

.tribine-title {
  position: absolute;
  bottom: 20px;
  left: 20px;
  color: #fff;
  font-weight: bold;
  text-shadow: 0 2px 10px rgba(0, 0, 0, 0.7);
  z-index: 1;
}

